[gd_scene load_steps=4 format=3 uid="uid://ctqbp7ptwxhnu"]

[ext_resource type="Script" path="res://scripts/entity_picker.gd" id="1_i4sna"]
[ext_resource type="Resource" uid="uid://ecntaxk6duu" path="res://test_data/animal2.tres" id="2_enebm"]
[ext_resource type="PackedScene" uid="uid://nv02mvdvgjxy" path="res://scenes/entity_picker_card.tscn" id="2_eop12"]

[node name="EntityPicker" type="PanelContainer"]
offset_right = 520.0
offset_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_i4sna")
target_entity = ExtResource("2_enebm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntityLinkedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Entidade Vinculda"

[node name="LinkedContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EntityPickerCard" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LinkedContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard2" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LinkedContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard3" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LinkedContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntityAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Entidades"

[node name="AvailableContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="EntityPickerCard" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard2" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard3" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard4" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard5" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="EntityPickerCard6" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AvailableContainer" instance=ExtResource("2_eop12")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "ÔÅù Confirmar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_pressed"]
